Your second Commit

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,6 +25,29 @@
    "source": [
     "for i in range(10):\n",
     "    print (i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "G\n",
+      "E\n",
+      "O\n",
+      "R\n",
+      "G\n",
+      "E\n"
+     ]
+    }
+   ],
+   "source": [
+    "for j in 'GEORGE':\n",
+    "    print(j)"
    ]
   }
  ],
