Added Deez Nuts

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -29,24 +29,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "G\n",
+      "D\n",
       "E\n",
-      "O\n",
-      "R\n",
-      "G\n",
-      "E\n"
+      "E\n",
+      "Z\n",
+      " \n",
+      "N\n",
+      "U\n",
+      "T\n",
+      "S\n"
      ]
     }
    ],
    "source": [
-    "for j in 'GEORGE':\n",
+    "for j in 'DEEZ NUTS':\n",
     "    print(j)"
    ]
   }
