Changed to Test

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -29,27 +29,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D\n",
-      "E\n",
-      "E\n",
-      "Z\n",
-      " \n",
-      "N\n",
-      "U\n",
       "T\n",
-      "S\n"
+      "H\n",
+      "I\n",
+      "S\n",
+      " \n",
+      "I\n",
+      "S\n",
+      " \n",
+      "A\n",
+      " \n",
+      "T\n",
+      "E\n",
+      "S\n",
+      "T\n"
      ]
     }
    ],
    "source": [
-    "for j in 'DEEZ NUTS':\n",
+    "for j in 'THIS IS A TEST':\n",
     "    print(j)"
    ]
   }
