--- a/Test.ipynb
+++ b/Test.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,12 +49,18 @@
       "T\n",
       "E\n",
       "S\n",
-      "T\n"
+      "T\n",
+      " \n",
+      "A\n",
+      "G\n",
+      "A\n",
+      "I\n",
+      "N\n"
      ]
     }
    ],
    "source": [
-    "for j in 'THIS IS A TEST':\n",
+    "for j in 'THIS IS A TEST AGAIN':\n",
     "    print(j)"
    ]
   }
