Fixed full name

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -41,12 +41,20 @@
       "O\n",
       "R\n",
       "G\n",
-      "E\n"
+      "E\n",
+      " \n",
+      "N\n",
+      "J\n",
+      "U\n",
+      "G\n",
+      "U\n",
+      "N\n",
+      "A\n"
      ]
     }
    ],
    "source": [
-    "for j in 'GEORGE':\n",
+    "for j in 'GEORGE NJUGUNA':\n",
     "    print(j)"
    ]
   }
