--- a/Test.ipynb
+++ b/Test.ipynb
@@ -29,6 +29,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "G\n",
+      "E\n",
+      "O\n",
+      "R\n",
+      "G\n",
+      "E\n"
+     ]
+    }
+   ],
+   "source": [
+    "for j in 'GEORGE':\n",
+    "    print(j)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
