--- a/Test.ipynb
+++ b/Test.ipynb
@@ -30,6 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -55,6 +56,43 @@
    ],
    "source": [
     "for j in 'GEORGE NJUGUNA':\n",
+    "    print(j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T\n",
+      "H\n",
+      "I\n",
+      "S\n",
+      " \n",
+      "I\n",
+      "S\n",
+      " \n",
+      "A\n",
+      " \n",
+      "T\n",
+      "E\n",
+      "S\n",
+      "T\n",
+      " \n",
+      "A\n",
+      "G\n",
+      "A\n",
+      "I\n",
+      "N\n"
+     ]
+    }
+   ],
+   "source": [
+    "for j in 'THIS IS A TEST AGAIN':\n",
     "    print(j)"
    ]
   }
