--- a/Test.ipynb
+++ b/Test.ipynb
@@ -29,7 +29,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -61,22 +60,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "L\n",
+      "E\n",
       "T\n",
-      "H\n",
-      "I\n",
-      "S\n",
       " \n",
-      "I\n",
-      "S\n",
-      " \n",
-      "A\n",
+      "M\n",
+      "E\n",
       " \n",
       "T\n",
       "E\n",
@@ -84,15 +80,21 @@
       "T\n",
       " \n",
       "A\n",
-      "G\n",
-      "A\n",
+      " \n",
+      "N\n",
+      "E\n",
+      "W\n",
+      " \n",
+      "T\n",
+      "H\n",
       "I\n",
-      "N\n"
+      "N\n",
+      "G\n"
      ]
     }
    ],
    "source": [
-    "for j in 'THIS IS A TEST AGAIN':\n",
+    "for j in 'LET ME TEST A NEW THING':\n",
     "    print(j)"
    ]
   }
