--- a/Test.ipynb
+++ b/Test.ipynb
@@ -29,8 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,12 +49,20 @@
       "G\n",
       "U\n",
       "N\n",
-      "A\n"
+      "A\n",
+      " \n",
+      "W\n",
+      "A\n",
+      "N\n",
+      "J\n",
+      "I\n",
+      "R\n",
+      "U\n"
      ]
     }
    ],
    "source": [
-    "for j in 'GEORGE NJUGUNA':\n",
+    "for j in 'GEORGE NJUGUNA WANJIRU':\n",
     "    print(j)"
    ]
   },
