--- a/Test.ipynb
+++ b/Test.ipynb
@@ -52,12 +52,30 @@
       "J\n",
       "I\n",
       "R\n",
-      "U\n"
+      "U\n",
+      " \n",
+      "A\n",
+      "N\n",
+      "D\n",
+      " \n",
+      "I\n",
+      " \n",
+      "L\n",
+      "O\n",
+      "V\n",
+      "E\n",
+      " \n",
+      "P\n",
+      "Y\n",
+      "T\n",
+      "H\n",
+      "O\n",
+      "N\n"
      ]
     }
    ],
    "source": [
-    "for j in 'GEORGE NJUGUNA WANJIRU':\n",
+    "for j in 'GEORGE NJUGUNA WANJIRU AND I LOVE PYTHON':\n",
     "    print(j)"
    ]
   },
