TESTING GIT PUSH

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -70,12 +70,13 @@
       "T\n",
       "H\n",
       "O\n",
-      "N\n"
+      "N\n",
+      " \n"
      ]
     }
    ],
    "source": [
-    "for j in 'GEORGE NJUGUNA WANJIRU AND I LOVE PYTHON':\n",
+    "for j in 'GEORGE NJUGUNA WANJIRU AND I LOVE PYTHON ':\n",
     "    print(j)"
    ]
   },
@@ -88,9 +89,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L\n",
-      "E\n",
       "T\n",
+      "H\n",
+      "I\n",
+      "S\n",
+      " \n",
+      "I\n",
+      "S\n",
       " \n",
       "M\n",
       "E\n",
@@ -99,23 +104,27 @@
       "E\n",
       "S\n",
       "T\n",
-      " \n",
-      "A\n",
-      " \n",
-      "N\n",
-      "E\n",
-      "W\n",
-      " \n",
-      "T\n",
-      "H\n",
       "I\n",
       "N\n",
-      "G\n"
+      "G\n",
+      " \n",
+      "O\n",
+      "U\n",
+      "T\n",
+      " \n",
+      "G\n",
+      "I\n",
+      "T\n",
+      " \n",
+      "P\n",
+      "U\n",
+      "S\n",
+      "H\n"
      ]
     }
    ],
    "source": [
-    "for j in 'LET ME TEST A NEW THING':\n",
+    "for j in 'THIS IS ME TESTING OUT GIT PUSH':\n",
     "    print(j)"
    ]
   }
