--- a/Test.ipynb
+++ b/Test.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -119,12 +119,38 @@
       "P\n",
       "U\n",
       "S\n",
-      "H\n"
+      "H\n",
+      " \n",
+      "A\n",
+      "N\n",
+      "D\n",
+      " \n",
+      "A\n",
+      "D\n",
+      "D\n",
+      "I\n",
+      "N\n",
+      "G\n",
+      " \n",
+      "S\n",
+      "O\n",
+      "M\n",
+      "E\n",
+      " \n",
+      "N\n",
+      "O\n",
+      "N\n",
+      "E\n",
+      "S\n",
+      "E\n",
+      "N\n",
+      "S\n",
+      "E\n"
      ]
     }
    ],
    "source": [
-    "for j in 'THIS IS ME TESTING OUT GIT PUSH':\n",
+    "for j in 'THIS IS ME TESTING OUT GIT PUSH AND ADDING SOME NONESENSE':\n",
     "    print(j)"
    ]
   }
