--- a/Test.ipynb
+++ b/Test.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,24 +65,27 @@
       "V\n",
       "E\n",
       " \n",
-      "P\n",
-      "Y\n",
-      "T\n",
-      "H\n",
+      "N\n",
       "O\n",
       "N\n",
+      "E\n",
+      "S\n",
+      "E\n",
+      "N\n",
+      "S\n",
+      "E\n",
       " \n"
      ]
     }
    ],
    "source": [
-    "for j in 'GEORGE NJUGUNA WANJIRU AND I LOVE PYTHON ':\n",
+    "for j in 'GEORGE NJUGUNA WANJIRU AND I LOVE NONESENSE ':\n",
     "    print(j)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -119,38 +122,12 @@
       "P\n",
       "U\n",
       "S\n",
-      "H\n",
-      " \n",
-      "A\n",
-      "N\n",
-      "D\n",
-      " \n",
-      "A\n",
-      "D\n",
-      "D\n",
-      "I\n",
-      "N\n",
-      "G\n",
-      " \n",
-      "S\n",
-      "O\n",
-      "M\n",
-      "E\n",
-      " \n",
-      "N\n",
-      "O\n",
-      "N\n",
-      "E\n",
-      "S\n",
-      "E\n",
-      "N\n",
-      "S\n",
-      "E\n"
+      "H\n"
      ]
     }
    ],
    "source": [
-    "for j in 'THIS IS ME TESTING OUT GIT PUSH AND ADDING SOME NONESENSE':\n",
+    "for j in 'THIS IS ME TESTING OUT GIT PUSH':\n",
     "    print(j)"
    ]
   }
