--- a/Test.ipynb
+++ b/Test.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -125,32 +125,35 @@
       "N\n",
       "D\n",
       " \n",
-      "A\n",
-      "D\n",
-      "D\n",
+      "P\n",
+      "U\n",
+      "L\n",
+      "L\n",
+      " \n",
+      "W\n",
       "I\n",
-      "N\n",
+      "T\n",
+      "H\n",
+      " \n",
       "G\n",
+      "I\n",
+      "T\n",
       " \n",
-      "S\n",
-      "O\n",
-      "M\n",
-      "E\n",
+      "A\n",
+      "N\n",
+      "D\n",
       " \n",
-      "N\n",
-      "O\n",
-      "N\n",
-      "E\n",
-      "S\n",
-      "E\n",
-      "N\n",
-      "S\n",
-      "E\n"
+      "G\n",
+      "I\n",
+      "T\n",
+      "H\n",
+      "U\n",
+      "B\n"
      ]
     }
    ],
    "source": [
-    "for j in 'THIS IS ME TESTING OUT GIT PUSH AND ADDING SOME NONESENSE':\n",
+    "for j in 'THIS IS ME TESTING OUT GIT PUSH AND PULL WITH GIT AND GITHUB':\n",
     "    print(j)"
    ]
   }
