--- a/Test.ipynb
+++ b/Test.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -74,18 +74,29 @@
       "N\n",
       "S\n",
       "E\n",
-      " \n"
+      " \n",
+      "a\n",
+      "n\n",
+      "d\n",
+      " \n",
+      "r\n",
+      "e\n",
+      "v\n",
+      "e\n",
+      "r\n",
+      "t\n",
+      "s\n"
      ]
     }
    ],
    "source": [
-    "for j in 'GEORGE NJUGUNA WANJIRU AND I LOVE NONESENSE ':\n",
+    "for j in 'GEORGE NJUGUNA WANJIRU AND I LOVE NONESENSE and reverts':\n",
     "    print(j)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
