--- a/Test.ipynb
+++ b/Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -74,25 +74,18 @@
       "N\n",
       "S\n",
       "E\n",
-      " \n",
-      "T\n",
-      "e\n",
-      "s\n",
-      "t\n",
-      "i\n",
-      "n\n",
-      "g\n"
+      " \n"
      ]
     }
    ],
    "source": [
-    "for j in 'GEORGE NJUGUNA WANJIRU AND I LOVE NONESENSE Testing':\n",
+    "for j in 'GEORGE NJUGUNA WANJIRU AND I LOVE NONESENSE ':\n",
     "    print(j)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
