--- a/Test.ipynb
+++ b/Test.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
     }
    ],
    "source": [
-    "for j in 'GEORGE NJUGUNA WANJIRU AND I LOVE NONESENSE':\n",
+    "for j in 'GEORGE NJUGUNA WANJIRU AND I LOVE NONESENSE till':\n",
     "    print(j)"
    ]
   },
