Revert "TRY AGAIN"
This reverts commit 3a4b2f85f61f695b4961625bf9f7ec3362795a64.

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
     }
    ],
    "source": [
-    "for j in 'GEORGE NJUGUNA WANJIRU AND I LOVE NONESENSE till':\n",
+    "for j in 'GEORGE NJUGUNA WANJIRU AND I LOVE NONESENSE':\n",
     "    print(j)"
    ]
   },
