--- a/Test.ipynb
+++ b/Test.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -127,35 +127,19 @@
       "N\n",
       "D\n",
       " \n",
+      "G\n",
+      "I\n",
+      "T\n",
+      " \n",
       "P\n",
       "U\n",
       "L\n",
-      "L\n",
-      " \n",
-      "W\n",
-      "I\n",
-      "T\n",
-      "H\n",
-      " \n",
-      "G\n",
-      "I\n",
-      "T\n",
-      " \n",
-      "A\n",
-      "N\n",
-      "D\n",
-      " \n",
-      "G\n",
-      "I\n",
-      "T\n",
-      "H\n",
-      "U\n",
-      "B\n"
+      "L\n"
      ]
     }
    ],
    "source": [
-    "for j in 'THIS IS ME TESTING OUT GIT PUSH AND ADDING SOME NONESENSE':\n",
+    "for j in 'THIS IS ME TESTING OUT GIT PUSH AND GIT PULL':\n",
     "    print(j)"
    ]
   }
