--- a/Test.ipynb
+++ b/Test.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -65,20 +65,17 @@
       "V\n",
       "E\n",
       " \n",
-      "N\n",
+      "P\n",
+      "Y\n",
+      "T\n",
+      "H\n",
       "O\n",
-      "N\n",
-      "E\n",
-      "S\n",
-      "E\n",
-      "N\n",
-      "S\n",
-      "E\n"
+      "N\n"
      ]
     }
    ],
    "source": [
-    "for j in 'GEORGE NJUGUNA WANJIRU AND I LOVE NONESENSE':\n",
+    "for j in 'GEORGE NJUGUNA WANJIRU AND I LOVE PYTHON':\n",
     "    print(j)"
    ]
   },
